# delivery_service_api

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  db_setup.py  docker-compose-local.yaml  docker-compose.yml  main.py  model.py  pyproject.toml  start.sh
alembic/: env.py
api/: config.py  exchange_rate.py  models.py  routes.py
db/: db_setup.py
messaging/: celery_app.py  celery_worker.py  tasks.py  worker.py
migrations/: env.py
migrations/versions/: 5a80f7beea08_update_type.py  afbc53441c42_initial.py
pydantic_schemas/: models_schemas.py
