[project]
name = "delivery-service-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexandr",email = "alexandarplatoshin@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic (>=1.14.1,<2.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "envparse (>=0.2.0,<0.3.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "redis (>=5.2.1,<6.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "aioredis (>=2.0.1,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
